# simplicio-loop

./: .gitattributes  .gitignore  .task_wi558.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOD.md  GEMINI.md  INSTALL.md  MANIFEST.in  PRICING.md  PYPI.md  README.md  SIMPLICIO_ECOSYSTEM.md  claimed-428.md  conformance-report.json  llms.txt  plan.json  pyproject.toml  simplicio-loop.project.json  sitecustomize.py
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.cursor-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
READMEs/: README.ar-SA.md  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.hi-IN.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.nl-NL.md  README.pl-PL.md  README.pt-BR.md  README.ru-RU.md  README.tr-TR.md  README.zh-CN.md
adapters/: MATRIX.md
app/: providers.json  simplicio_tray.py
bench/: async-process-supervisor-baseline.json  async-queue-baseline.json  benchmark_runtime_bridge_sessions.py  event-loop-baseline.json  event-loop-canary-unix.json  event-loop-rollout-comparison.json  event-loop-uvloop-off.json  event-loop-uvloop-on.json  evidence-binding-baseline.json  hub-governor-benchmark.json  hub-queue-agent-client-baseline.json  hub-queue-retry-baseline.json  hub-scheduler-baseline.json  hub-transport-baseline.json  map-git-worktrees-baseline.json  map-single-flight-baseline.json  map-watcher-baseline.json
config/: json-boundaries.toml
contracts/: evidence-binding-v1.schema.json
docs/: ASYNC_BOUNDED_QUEUE_RUNBOOK.md  ASYNC_IO_MIGRATION_RUNBOOK.md  AUTO_FAN_OUT.md  CONSOLIDATION_UNIFIED_HUB.md  DELIVERY_TRUTH_RUNBOOK.md  DISTRIBUTED_COORDINATION.md  ECOSYSTEM_AUTHORITY_SLOS.md  EVIDENCE_BINDING.md  EXTENSIONS_DOMAIN_CONTRACT.md  GITHUB_ISSUES_ADAPTER.md  HISTORY_MIGRATION_PLAN.md  HUB_GOVERNOR_RUNBOOK.md  HUB_QUEUE_RETRY_RUNBOOK.md  HUB_RUNBOOK.md  INDEPENDENT_WATCHER.md  INSTALL_MUTATIONS.md  MCP_SETUP.md  PHASE_EVENT_CONTRACT.md  PROCESS_SUPERVISOR_RUST_RUNBOOK.md  PROGRESS_PROTOCOL.md  QUALITY_GATE.md  RELEASE.md  REMOTE_QUEUE.md  REMOTE_WORKER_RUNBOOK.md  REPOSITORY_GOVERNANCE.md  REPO_SIZE_REPORT.md  RUN_OUTCOME.md  SCRIPTS_INVENTORY.md  SIMPLICIO_OPERATIONAL_MANUAL.md  SUPERVISOR_ENFORCEMENT_RUNBOOK.md  SUPPLY_CHAIN.md  TECHNICAL_DEBT.md  WORK_ITEM_ATTEMPTS.md  async-process-supervisor-benchmark.md  async-queue-benchmark.md  attempt-journal.md  completion-oracle-matrix.md  delivery-contract.md  delivery-target-receipts.md  history_migration_plan.json  (+16 more)
engine/: README.md  simplicio_audit.py  simplicio_cache.py  simplicio_capture.py  simplicio_cli.py  simplicio_compress_extra.py  simplicio_detect.py  simplicio_embed.py  simplicio_engine.py  simplicio_evals.py  simplicio_init.py  simplicio_mcp.py  simplicio_report.py  simplicio_router.py  simplicio_semantic_ml.py  simplicio_signatures.py  simplicio_verify.py  simplicio_wrap.py
examples/: EXAMPLES.md  loop_pipeline_topology.json
hooks/: README.md  action_gate.py  headroom_dashboard.py  headroom_watch.py  loop_capture.py  loop_stop.py  orient_rewrite.py  simplicio_dashboard.py  simplicio_watch.py
plugin/: README.md
quality/: coverage-baseline.json
rust/: Cargo.toml
rust/simplicio-parity/: Cargo.toml
rust/simplicio-parity/examples/: diff_fixture.rs
rust/simplicio-parity/src/: lib.rs
rust/simplicio-proxy/: Cargo.toml
rust/simplicio-proxy/src/: config.rs  error.rs  headers.rs  health.rs  lib.rs  main.rs  proxy.rs  responses_items.rs  websocket.rs
rust/simplicio-proxy/src/bedrock/: auth_mode_layer.rs  envelope.rs  eventstream.rs  eventstream_to_sse.rs  invoke.rs  invoke_streaming.rs  mod.rs  sigv4.rs  vendor.rs
rust/simplicio-proxy/src/cache_stabilization/: anthropic_cache_control.rs  drift_detector.rs  mod.rs  openai_cache_key.rs  tool_def_normalize.rs  volatile_detector.rs
rust/simplicio-proxy/src/compression/: anthropic.rs  live_zone_anthropic.rs  live_zone_openai.rs  live_zone_responses.rs  mod.rs  model_limits.rs
rust/simplicio-proxy/src/handlers/: chat_completions.rs  conversations.rs  mod.rs  responses.rs
rust/simplicio-proxy/src/observability/: cache_hit_rate.rs  compression_ratio.rs  metric_names.rs  mod.rs  prometheus.rs  proxy_metrics.rs
rust/simplicio-proxy/src/sse/: anthropic.rs  framing.rs  mod.rs  openai_chat.rs  openai_responses.rs
rust/simplicio-proxy/src/vertex/: adc.rs  envelope.rs  mod.rs  raw_predict.rs  stream_raw_predict.rs
rust/simplicio-proxy/tests/: e2e_real.rs  integration_bedrock_authmode.rs  integration_bedrock_invoke.rs  integration_bedrock_metrics.rs  integration_bedrock_streaming.rs  integration_body.rs  integration_body_size.rs  integration_cache_control.rs  integration_cache_drift.rs  integration_chat_completions.rs  integration_compression.rs  integration_conversations.rs  integration_e3_anthropic_cache_control.rs  integration_e4_openai_cache_key.rs  integration_headers.rs  integration_health.rs  integration_http.rs  integration_metrics.rs  integration_request_id.rs  integration_responses.rs  integration_responses_streaming.rs  integration_schema_sort.rs  integration_sse.rs  integration_tool_sort.rs  integration_vertex_raw_predict.rs  integration_volatile_detector.rs  integration_ws.rs  sse_anthropic.rs  sse_framing.rs  sse_openai_chat.rs  sse_openai_responses.rs
rust/simplicio-proxy/tests/common/: mod.rs
rust/simplicio-proxy/tests/fixtures/: anthropic_messages_request_real.json
rust/simplicio-supervisor/: Cargo.toml
rust/simplicio-supervisor/src/: lib.rs  main.rs
rust/simplicio-supervisor/tests/: cli.rs
rust/src/: adapter.rs  lease.rs  lib.rs  result.rs  spec.rs
rust/tests/: contract.rs  spawn_cancel.rs
scripts/: _locked_append.py  agent_display_identity.py  agent_identity.py  agent_replication.py  agentsview_adapter.py  authority_e2e.py  autoresearch.py  benchmark_async_process_supervisor.py  benchmark_async_queue.py  benchmark_event_loop.py  benchmark_hub_governor.py  benchmark_hub_queue_agent_client.py  benchmark_hub_queue_retry.py  benchmark_hub_scheduler.py  benchmark_hub_transport.py  benchmark_inference_admission.py  benchmark_map_service.py  (+138 more)
(+849 files in other folders)
