[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicio-loop"
version = "3.38.1"
description = "The Universal Looping AI Orchestrator — a runtime-agnostic super-plugin (7 skills) that drains any queue of work end-to-end on any LLM/runtime."
readme = "PYPI.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
keywords = ["ai", "agent", "orchestrator", "llm", "claude", "cursor", "automation", "ralph-loop", "token-economy", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]
# The simplicio-loop drive requires the operator package (`simplicio-cli`), which exposes
# `simplicio-dev-cli` and also brings the survey binary `simplicio-mapper` transitively.
dependencies = [
  "simplicio-cli>=0.16.2",
  "tiktoken>=0.12.0,<1",
]

# Optional: the real embedding backend for `simplicio-cli semantic --ml` / `simplicio-cli rag --ml`.
# The native engine itself is stdlib-only; this only enables embedding-based semantic dedup +
# meaning retrieval. `pip install "simplicio-loop[ml]"`.
[project.optional-dependencies]
# Dev/test dependencies used by the local quality gate and secure-transport fixtures.
dev = ["pytest>=7", "pytest-cov>=4", "cryptography>=42,<50", "jsonschema>=4,<5"]
ml = ["model2vec>=0.3", "numpy>=1.21"]
uvloop = ["uvloop>=0.19; platform_system != 'Windows'"]

[project.urls]
Homepage = "https://github.com/wesleysimplicio/simplicio-loop"
Repository = "https://github.com/wesleysimplicio/simplicio-loop"
Issues = "https://github.com/wesleysimplicio/simplicio-loop/issues"

[project.scripts]
simplicio-loop = "simplicio_loop.cli:main"
simplicio-hub = "simplicio_loop.hub_daemon:main"
# issue #286 step 11: the multi-device remote-worker protocol's server + worker + supervisor
# are genuinely installable binaries, not source that only runs from a git checkout.
simplicio-remote-queue-server = "simplicio_loop.remote_queue_server_cli:main"
simplicio-remote-worker = "simplicio_loop.remote_worker_cli:main"
simplicio-remote-worker-supervisor = "simplicio_loop.remote_worker_supervisor_cli:main"
# issue #516: observability/enforcement CLI for the #498 process-supervisor contract
# (status/top/queue/cancel/drain/reports over the #514 ProcessSpec/Lease/Result adapter).
simplicio-process-supervisor = "simplicio_loop.process_enforcement_cli:main"

[tool.setuptools]
packages = ["simplicio_loop"]
include-package-data = true

[tool.setuptools.package-data]
simplicio_loop = ["_bundle/**/*", "_contracts/**/*.json"]

[tool.coverage.run]
source = ["simplicio_loop"]
omit = [
  "simplicio_loop/_bundle/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "external_integration: installed or network-backed lane excluded from the hermetic core gate",
  "satellite: opt-in satellite functionality excluded from the mandatory core gate",
]
# The bundle/plugin trees mirror source files and are validated by mirror-parity.
# Collect the canonical tests once instead of executing mirrored probes repeatedly.
testpaths = ["tests"]
