[package]
name = "simplicio-supervisor"
version = "0.1.0"
edition = "2021"
description = "Rust/Tokio process supervisor backend mirroring the simplicio ProcessSpec/ProcessLease/ProcessResult contract (issue #515, parent #498)."
license = "MIT"
publish = false

[lib]
name = "simplicio_supervisor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
