[package]
name = "simplicio-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "simplicio-supervisor"
path = "src/main.rs"

[lib]
name = "simplicio_supervisor"
path = "src/lib.rs"
